update fence gh token creation to allow for write access token minting
